# Promolecular

./: MANIFEST.in  README.md  pyproject.toml
promolecular/: __init__.py  promolecular.py  test_promolecular.py
promolecular/data/: __init__.py  kl_slsqp_results_anion.npz  kl_slsqp_results_cation.npz
promolecular/data/fchk/: nh3.fchk
