[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promolecular"
authors = [
  { name="QtChem Community" },
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.6"
classifiers = [
   'Development Status :: 0 - Released',
    'Environment :: Console',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Intended Audience :: Science/Research',
    "Intended Audience :: Education",
    "Natural Language :: English",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.16",
    "scipy>=1.4",
    "importlib_resources",
]
dynamic = ["version"]

